--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -6,3 +6,50 @@
 .list-admin li input { width: 228px;}
 .list-admin .fa-minus-circle { color: red;}
 .list-admin .fa-plus-circle { color: green;}
+
+#sidemenu { float:left;}
+#sidehelp { float:right;}
+#content { padding-top: 60px;}
+.fixed-header {
+  position: fixed;
+  right: 0;
+  left: 0;
+  z-index: 1030;
+  min-height: 50px;
+  margin-bottom: 20px;
+  background-color: #f8f8f8;
+  border: 1px solid #e7e7e7;
+  border-radius: 0;
+  width: 100%;
+}
+.fixed-header button {
+  position: relative;
+  padding: 9px 10px;
+  margin: 8px 15px;
+  background-color: transparent;
+  background-image: none;
+  border: 1px solid #ddd;;
+  border-radius: 4px;
+}
+#title {
+  float: left;
+  height: 50px;
+  padding: 15px 15px;
+  font-size: 18px;
+  line-height: 20px;
+	display: inline;
+	margin: 0 auto;
+}
+#room-icons {
+	display: inline;
+}
+.header-center {
+	margin-left: auto;
+	margin-right: auto;
+	width: 280px;
+}
+
+.btn-question {
+	width: 100%;
+	margin-top: 10px;
+}
