--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -53,3 +53,24 @@
 	width: 100%;
 	margin-top: 10px;
 }
+
+#animation {
+	animation: inout 1s;
+	animation-iteration-count: 1;
+	-webkit-animation: inout 1s; /* Safari & Chrome */
+	-webkit-animation-iteration-count: 1;
+	margin:50px auto;
+	height: 220px; 
+	width: 280px;
+}
+@keyframes inout {
+  0%   { transform: scale(0, 0); }
+  100%  { transform: scale(2, 2); }
+}
+@-webkit-keyframes inout { /* Safari & Chrome */
+  0%   { -webkit-transform: scale(0, 0); }
+  100% { -webkit-transform: scale(2, 2); }
+}
+#question-number {
+	font-size: 72px;
+}
