--- a/app/views/frame.scala.html
+++ b/app/views/frame.scala.html
@@ -2,6 +2,7 @@
 
 @main(Messages("application.title")) {
 <link rel="stylesheet" media="screen" href="@routes.Assets.at("javascripts/ext/sidr/stylesheets/jquery.sidr.light.css")">
+<link rel="stylesheet" media="screen" href="@routes.Assets.at("javascripts/ext/bootstrap-switch/css/bootstrap-switch.min.css")">
 <div id="toolbar" class="toolbar">
 	<button id="btn-menu" class="pull-left" type="button">
 		<i class="fa fa-bars fa-lg"></i>
@@ -21,7 +22,7 @@
 	}.getOrElse {
 		<div class="btn-group pull-right">
 			<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-				<i class="fa fa-sign-in"></i> @Messages("signin")</a>
+				<i class="fa fa-sign-in"></i> @Messages("signin")
 				<span class="caret"></span>
 			</button>
 			<ul class="dropdown-menu" role="menu">
@@ -46,44 +47,49 @@
 	</div>
 </div>
 <div id="content" class="container">
-	@content
+	<div id="content-dynamic">
+		@content
+	</div>
 </div>
 <div id="sidr" style="display:none;">
 	<ul>
-		<li><a href="#home"><i class="fa fa-home"></i> @Messages("home")</a></li>
+		<li><a href="#home" class="dynamic"><i class="fa fa-home"></i> @Messages("home")</a></li>
 		@userInfo.map { user =>
-			<li><a href="#make-room">@Messages("makeRoom")</a></li>
+			<li><a href="#make-room" class="dynamic">@Messages("makeRoom")</a></li>
 		}
 		@roomInfo.map { room =>
 			<li>@Messages("roomMenu")
 				<ul>
-					<li><a href="#question">@Messages("questions")</a></li>
-					<li><a href="#ranking">@Messages("ranking")</a></li>
+					<li><a href="#question" class="dynamic">@Messages("questions")</a></li>
+					<li><a href="#ranking" class="dynamic">@Messages("ranking")</a></li>
 					<li><a href="#chat">@Messages("chat")</a></li>
 					@userInfo.filterNot(room.isAdmin(_)).map { user =>
-						<li><a href="#post-question">@Messages("postQuestion")</a></li>
+						<li><a href="#post-question" class="dynamic">@Messages("postQuestion")</a></li>
 					}
 				</ul>
 			</li>
 			@userInfo.filter(room.isAdmin(_)).map { user =>
 				<li>@Messages("manageRoom")
 					<ul>
-						<li><a href="#edit-room">@Messages("editRoom")</a></li>
-						<li><a href="#edit-event">@Messages("editEvent")</a></li>
-						<li><a href="#make-question">@Messages("makeQuestion")</a></li>
-						<li><a href="#publish-question">@Messages("publishQuestion")</a></li>
+						<li><a href="#edit-room" class="dynamic">@Messages("editRoom")</a></li>
+						<li><a href="#edit-event" class="dynamic">@Messages("editEvent")</a></li>
+						<li><a href="#make-question" class="dynamic">@Messages("makeQuestion")</a></li>
+						<li><a href="#publish-question" class="dynamic">@Messages("publishQuestion")</a></li>
 					</ul>
 				</li>
 			}
 		}
-		<li><a href="#help"><i class="fa fa-question-circle"></i> @Messages("help")</a></li>
+		<li id="btn-debug" style="display:none;"><a href="#debug"><i class="fa fa-bug"></i> @Messages("debug")</a></li>
+		<li><a href="#help"><i class="fa fa-question-circle" class="dynamic"></i> @Messages("help")</a></li>
 	</ul>
 </div>
 <script src="@routes.Assets.at("javascripts/ext/sidr/jquery.sidr.min.js")"></script>
 <script src="@routes.Assets.at("javascripts/ext/touchSwipe/jquery.touchSwipe.js")"></script>
 <script src="@routes.Assets.at("javascripts/ext/animatedtablesorter/tsort.min.js")"></script>
+<script src="@routes.Assets.at("javascripts/ext/bootstrap-switch/js/bootstrap-switch.min.js")"></script>
 <script src="@routes.I18N.messages(lang.language)"></script>
 <script src="@routes.Assets.at("javascripts/flect.connection.js")"></script>
+<script src="@routes.Assets.at("javascripts/flect.template.js")"></script>
 <script src="@routes.Assets.at("javascripts/ws-quiz.js")"></script>
 <script>
 var app;
