--- a/app/views/frame.scala.html
+++ b/app/views/frame.scala.html
@@ -72,7 +72,7 @@
 				<li>@Messages("manageRoom")
 					<ul>
 						<li><a href="#edit-room" class="dynamic">@Messages("editRoom")</a></li>
-						<li><a href="#edit-event" class="dynamic">@Messages("editEvent")</a></li>
+						<li><a href="#event" class="dynamic">@Messages("editEvent")</a></li>
 						<li><a href="#make-question" class="dynamic">@Messages("makeQuestion")</a></li>
 						<li><a href="#publish-question" class="dynamic">@Messages("publishQuestion")</a></li>
 					</ul>
