--- a/app/assets/stylesheets/style.less
+++ b/app/assets/stylesheets/style.less
@@ -82,3 +82,27 @@
 	text-align: center;
 	margin: 10px auto;
 }
+
+.chat-left {
+	margin-left: 10px;
+	text-align: left;
+	width: 100%;
+}
+
+.chat-left img {
+	margin-right: 10px;
+}
+
+.chat-right {
+	margin-right: 10px;
+	text-align: right;
+	width: 100%;
+}
+
+.chat-right img {
+	margin-left: 10px;
+}
+
+#chat-text-len {
+	font-style: italic;
+}
