Add question page

--- a/app/views/question.scala.html
+++ b/app/views/question.scala.html
@@ -1,3 +1,4 @@
+@(sessionInfo: SessionInfo)(implicit lang: Lang)
 <div id="edit-question">
 	<h1>@Messages("questions")</h1>
 	<ul class="nav nav-tabs" id="edit-question-tab">
