--- a/app/views/question.scala.html
+++ b/app/views/question.scala.html
@@ -2,8 +2,8 @@
 <div id="edit-question">
 	<h1>@Messages("questions")</h1>
 	<ul class="nav nav-tabs" id="edit-question-tab">
-		<li class="active"><a href="#edit-question-current" data-toggle="tab">@Messages("stock")</a></li>
-		<li><a href="#edit-question-published" data-toggle="tab">@Messages("published")</a></li>
+		<li class="active"><a href="#edit-question-stock" data-toggle="tab">@(Messages("stock"))(<span id="question-stock-count">-1</span>)</a></li>
+		<li><a href="#edit-question-published" data-toggle="tab">@(Messages("published"))(<span id="question-published-count">-1</span>)</a></li>
 	</ul>
 	<div>
 		<div style="float:left;">
@@ -23,7 +23,7 @@
 		</div>
 	</div>
 	<div class="tab-content">
-		<div id="edit-question-current" class="tab-pane active">
+		<div id="edit-question-stock" class="tab-pane active">
 			<table class="table table-hover table-striped">
 				<thead>
 					<tr>
