--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,4 +1,4 @@
-@(sessionInfo: SessionInfo, twitterUrl: String)(implicit lang: Lang)
+@(sessionInfo: SessionInfo, twitterUrl: String, rooms: List[RoomInfo] = Nil)(implicit lang: Lang)
 <div class="app-home" id="home">
 	<div>
 		@if(sessionInfo.user.isEmpty) {
@@ -20,7 +20,7 @@
 		<h2>イベント</h2>
 		<ul class="nav nav-tabs">
 			<li class="active"><a href="#event-future" data-toggle="tab">近日開催</a></li>
-			<li><a href="#event-past" data-toggle="tab">終了</a></li>
+			<li><a href="#event-yours" data-toggle="tab">参加イベント</a></li>
 		</ul>
 		<div class="tab-content">
 			<div id="event-future" class="tab-pane active">
@@ -33,35 +33,17 @@
 						</tr>
 					</thead>
 					<tbody>
-						<tr>
-							<td>2014/03/01 19:00</td>
-							<td>Heroku meetup #12</td>
-							<td>20名</td>
-						</tr>
-						<tr>
-							<td>2014/03/01 19:00</td>
-							<td>Heroku meetup #12</td>
-							<td>20名</td>
-						</tr>
-						<tr>
-							<td>2014/03/01 19:00</td>
-							<td>Heroku meetup #12</td>
-							<td>20名</td>
-						</tr>
-						<tr>
-							<td>2014/03/01 19:00</td>
-							<td>Heroku meetup #12</td>
-							<td>20名</td>
-						</tr>
-						<tr>
-							<td>2014/03/01 19:00</td>
-							<td>Heroku meetup #12</td>
-							<td>20名</td>
-						</tr>
+						@rooms.map { room =>
+							<tr data-room="@room.id">
+								<td>@room.event.map(_.execDate.toString).getOrElse("未定")</td>
+								<td>@room.name @room.event.map("(" + _.title + ")")</td>
+								<td>@room.event.map(_.capacity + "名")</td>
+							</tr>
+						}
 					</tbody>
 				</table>
 			</div>
-			<div id="event-past" class="tab-pane">
+			<div id="event-yours" class="tab-pane">
 				<table class="table table-hover">
 					<thead>
 						<tr>
@@ -71,31 +53,6 @@
 						</tr>
 					</thead>
 					<tbody>
-						<tr>
-							<td>2014/03/01 19:00</td>
-							<td>Heroku meetup #12</td>
-							<td><img src="https://pbs.twimg.com/profile_images/426010078131400704/1W-l1xCk_mini.jpeg"></td>
-						</tr>
-						<tr>
-							<td>2014/03/01 19:00</td>
-							<td>Heroku meetup #12</td>
-							<td><img src="https://pbs.twimg.com/profile_images/426010078131400704/1W-l1xCk_mini.jpeg"></td>
-						</tr>
-						<tr>
-							<td>2014/03/01 19:00</td>
-							<td>Heroku meetup #12</td>
-							<td><img src="https://pbs.twimg.com/profile_images/426010078131400704/1W-l1xCk_mini.jpeg"></td>
-						</tr>
-						<tr>
-							<td>2014/03/01 19:00</td>
-							<td>Heroku meetup #12</td>
-							<td><img src="https://pbs.twimg.com/profile_images/426010078131400704/1W-l1xCk_mini.jpeg"></td>
-						</tr>
-						<tr>
-							<td>2014/03/01 19:00</td>
-							<td>Heroku meetup #12</td>
-							<td><img src="https://pbs.twimg.com/profile_images/426010078131400704/1W-l1xCk_mini.jpeg"></td>
-						</tr>
 					</tbody>
 				</table>
 			</div>
