--- a/app/views/debug.scala.html
+++ b/app/views/debug.scala.html
@@ -1,5 +1,5 @@
 @()(implicit lang: Lang)
-<div id="debug" style="display:none;">
+<div id="debug" style="display:none;" class="workspace">
 	<h1>Debugger</h1>
 	<h2>Change protocol(Use ajax)</h2>
 	<div>
