--- a/app/views/chat.scala.html
+++ b/app/views/chat.scala.html
@@ -1,24 +1,18 @@
 @(userInfo: Option[UserInfo], twitterUrl: String)(implicit lang: Lang)
-<div id="chat">
+<div id="chat" class="workspace">
 	<h1>@Messages("chat")</h1>
-	<div>
-		<p class="pull-right">@Html(Messages("html.roomMember"))</p>
-		<div class="clearfix"></div>
-	</div>
+	<div class="pull-right">@Html(Messages("html.roomMember"))</div>
+	<div class="clearfix"></div>
 	@userInfo.map { u =>
 		<div>
-			<form role="form">
-				<div class="form-group">
-					<textarea id="chat-text" class="form-control"></textarea>
-				</div>
-				<div id="chat-text-len">140</div>
-				<div class="checkbox">
-					<label>
-						<input id="chat-twitter" type="checkbox" checked="checked"> @Messages("postTwitter")
-					</label>
-				</div>
-			</form>
-			<button id="btn-tweet" type="button" class="btn btn-default">@Messages("tweet")</button>
+			<textarea id="chat-text" class="form-control" rows="5" style="width: 100%;"></textarea>
+			<div id="chat-text-len">140</div>
+			<div class="checkbox">
+				<label>
+					<input id="chat-twitter" type="checkbox" checked="checked"> @Messages("postTwitter")
+				</label>
+			</div>
+			<button id="btn-tweet" type="button">@Messages("tweet")</button>
 		</div>
 	}.getOrElse {
 		<div>
@@ -30,7 +24,7 @@
 		</div>
 	}
 	<hr>
-	<table class="table table-striped">
+	<table style="width:100%;">
 		<tbody>
 		</tbody>
 	</table>
