--- a/app/views/event.scala.html
+++ b/app/views/event.scala.html
@@ -1,37 +1,46 @@
 @(sessionInfo: SessionInfo)(implicit lang: Lang)
-<div id="edit-event">
+<div id="edit-event" class="workspace">
 	<h1>イベント管理</h1>
-	<div>
-		<form role="form">
+	<div class="input-form">
+		<div>
 			<div class="form-group">
 				<label>タイトル</label>
+			</div>
+			<div>
 				<input class="form-control">
 			</div>
-			<div class="form-group">
+			<div>
 				<label>予定日</label>
+			</div>
+			<div>
 				<input class="form-control" type="date">
 			</div>
-			<div class="form-group">
+			<div>
 				<label>開始時間</label>
+			</div>
+			<div>
 				<input class="form-control" type="time">
 			</div>
-			<div class="form-group">
+			<div>
 				<label>定員</label>
+			</div>
+			<div>
 				<select class="form-control">
 					<option>20人</option>
 					<option>50人</option>
 					<option>100人</option>
 				</select>
 			</div>
-			<div class="form-group">
+			<div>
 				<label>パスコード</label>
+			</div>
+			<div>
 				<input class="form-control">
 			</div>
-			<div class="form-group">
+			<div>
 				<label>説明</label>
-				<textarea class="form-control"></textarea>
+				<textarea rows="5" class="form-control"></textarea>
 			</div>
-		</form>
 			<div>
 				<button class="btn btn-primary">イベント開始</button>
 				<button class="btn btn-primary">変更を保存</button>
