--- a/app/views/question.scala.html
+++ b/app/views/question.scala.html
@@ -1,29 +1,29 @@
 @(sessionInfo: SessionInfo)(implicit lang: Lang)
-<div id="edit-question">
+<div id="edit-question" class="workspace">
 	<h1>@Messages("questions")</h1>
-	<ul class="nav nav-tabs" id="edit-question-tab">
-		<li class="active"><a href="#edit-question-stock" data-toggle="tab">@(Messages("stock"))(<span id="question-stock-count">-1</span>)</a></li>
-		<li><a href="#edit-question-published" data-toggle="tab">@(Messages("published"))(<span id="question-published-count">-1</span>)</a></li>
-	</ul>
-	<div>
-		<div style="float:left;">
-			<button class="btn" id="edit-question-left">
-				<i class="fa fa-chevron-circle-left fa-lg"></i>
-			</button>
-		</div>
-		<div style="display:inline-block; width: 240px;padding-left:10px;padding-top:5px;">
-			<i class="fa fa-search fa-lg"></i>
-			<input type="text">
-			<button id="edit-question-new">@Messages("new")</button>
-		</div>
-		<div style="float:right;">
-			<button class="btn" id="edit-question-right">
-				<i class="fa fa-chevron-circle-right fa-lg"></i>
-			</button>
-		</div>
-	</div>
 	<div class="tab-content">
-		<div id="edit-question-stock" class="tab-pane active">
+		<ul id="edit-question-tab">
+			<li><a href="#edit-question-stock">@(Messages("stock"))(<span id="question-stock-count">-1</span>)</a></li>
+			<li><a href="#edit-question-published">@(Messages("published"))(<span id="question-published-count">-1</span>)</a></li>
+		</ul>
+		<div>
+			<div style="float:left;">
+				<button class="btn" id="edit-question-left">
+					<i class="fa fa-chevron-circle-left fa-lg"></i>
+				</button>
+			</div>
+			<div style="display:inline-block; width: 240px;padding-left:10px;padding-top:5px;">
+				<i class="fa fa-search fa-lg"></i>
+				<input type="text">
+				<button id="edit-question-new">@Messages("new")</button>
+			</div>
+			<div style="float:right;">
+				<button class="btn" id="edit-question-right">
+					<i class="fa fa-chevron-circle-right fa-lg"></i>
+				</button>
+			</div>
+		</div>
+		<div id="edit-question-stock">
 			<table class="table table-hover table-striped">
 				<thead>
 					<tr>
@@ -36,7 +36,7 @@
 			</table>
 			<div id="edit-question-current-none" style="display:none;">@Messages("noQuestions")</div>
 		</div>
-		<div id="edit-question-published" class="tab-pane">
+		<div id="edit-question-published">
 			<table class="table table-hover">
 				<thead>
 					<tr>
