Add makeQuestion page

--- a/app/views/question.scala.html
+++ b/app/views/question.scala.html
@@ -14,7 +14,7 @@
 			</div>
 			<div style="display:inline-block; width: 240px;padding-left:10px;padding-top:5px;">
 				<i class="fa fa-search fa-lg"></i>
-				<input type="text">
+				<input type="text" style="width:120px;">
 				<button id="edit-question-new">@Messages("new")</button>
 			</div>
 			<div style="float:right;">
